# letters

./: .gitignore  CHANGES.md  LICENSE  Makefile  README.md  default.nix  dune  dune-project  ethereal-email-chain.pem  index.html  letters.opam  letters.opam.locked
.circleci/: config.yml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/workflows/: ci.yml
index.html/: index.html
letters/: index.html
letters/Letters/: index.html
letters/Letters/Config/: index.html
letters/Letters__/: index.html
letters/Letters__/Ca_certs/: index.html
letters/Letters__/Sendmail_handler/: index.html
letters/Letters__Ca_certs/: index.html
letters/Letters__Sendmail_handler/: index.html
lib/: ca_certs.ml  ca_certs.mli  dune  letters.ml  letters.mli  sendmail_handler.ml  sendmail_handler.mli
service-test/: dune  test.ml
test/: dune  test.ml
